Fix all project errors: invalid counties, incomplete email, shipping fee calculation, contact form, and password field

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -87,7 +87,7 @@
     <div class="col-md-12">
       <h3>Contact Information</h3>
       <p><strong>Phone:</strong> +254 715224878</p>
-      <p><strong>Email:</strong> muo</p>
+      <p><strong>Email:</strong> info@remedystore.com</p>
       <p><strong>Address:</strong> 123 Wellness Street, Nairobi, Kenya</p>
     </div>
   </div>
