Add product cards for herbal items
Added product cards for Castor Oil, Honey, Hibiscus, Moringa, and Slippery Elm with benefits, usage, and pricing.

--- a/frontend/order.html
+++ b/frontend/order.html
@@ -539,6 +539,88 @@
       </div>
     </div>
 
+
+<!-- Castor Oil -->
+<div class="col-md-6 mb-5">
+  <div class="card h-100">
+    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/12/345678/1.jpg" class="card-img-top" alt="Castor Oil">
+    <div class="card-body">
+      <h5 class="card-title">Castor Oil</h5>
+      <p class="card-text">
+        <strong>Benefits:</strong> Castor oil promotes hair growth, moisturizes skin, supports joint health, and aids digestion.
+      </p>
+      <p class="text-muted"><small><strong>Usage:</strong> Apply to scalp and hair, massage into skin, or use as a natural laxative in small amounts.</small></p>
+      <p class="text-success"><strong>KES 800</strong></p>
+      <button type="button" class="btn btn-success w-100" onclick="return addToCart('Castor Oil', 800);">Add to Cart</button>
+    </div>
+  </div>
+</div>
+
+<!-- Honey -->
+<div class="col-md-6 mb-5">
+  <div class="card h-100">
+    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/98/765432/1.jpg" class="card-img-top" alt="Honey">
+    <div class="card-body">
+      <h5 class="card-title">Honey</h5>
+      <p class="card-text">
+        <strong>Benefits:</strong> Honey boosts immunity, soothes sore throats, aids wound healing, and provides natural energy.
+      </p>
+      <p class="text-muted"><small><strong>Usage:</strong> Add to tea, spread on bread, use in baking, or apply to skin for healing.</small></p>
+      <p class="text-success"><strong>KES 1,200</strong></p>
+      <button type="button" class="btn btn-success w-100" onclick="return addToCart('Honey', 1200);">Add to Cart</button>
+    </div>
+  </div>
+</div>
+
+<!-- Hibiscus -->
+<div class="col-md-6 mb-5">
+  <div class="card h-100">
+    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/56/789012/1.jpg" class="card-img-top" alt="Hibiscus">
+    <div class="card-body">
+      <h5 class="card-title">Hibiscus</h5>
+      <p class="card-text">
+        <strong>Benefits:</strong> Hibiscus lowers blood pressure, supports liver health, boosts immunity, and aids weight management.
+      </p>
+      <p class="text-muted"><small><strong>Usage:</strong> Brew as tea, add to smoothies, or use in natural remedies.</small></p>
+      <p class="text-success"><strong>KES 900</strong></p>
+      <button type="button" class="btn btn-success w-100" onclick="return addToCart('Hibiscus', 900);">Add to Cart</button>
+    </div>
+  </div>
+</div>
+
+<!-- Moringa -->
+<div class="col-md-6 mb-5">
+  <div class="card h-100">
+    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/34/567890/1.jpg" class="card-img-top" alt="Moringa">
+    <div class="card-body">
+      <h5 class="card-title">Moringa</h5>
+      <p class="card-text">
+        <strong>Benefits:</strong> Moringa is rich in vitamins, minerals, and antioxidants. It supports immunity, energy, and overall wellness.
+      </p>
+      <p class="text-muted"><small><strong>Usage:</strong> Add powder to smoothies, soups, or tea.</small></p>
+      <p class="text-success"><strong>KES 1,500</strong></p>
+      <button type="button" class="btn btn-success w-100" onclick="return addToCart('Moringa', 1500);">Add to Cart</button>
+    </div>
+  </div>
+</div>
+
+<!-- Slippery Elm -->
+<div class="col-md-6 mb-5">
+  <div class="card h-100">
+    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/78/901234/1.jpg" class="card-img-top" alt="Slippery Elm">
+    <div class="card-body">
+      <h5 class="card-title">Slippery Elm</h5>
+      <p class="card-text">
+        <strong>Benefits:</strong> Slippery elm soothes digestive issues, supports throat health, and reduces inflammation.
+      </p>
+      <p class="text-muted"><small><strong>Usage:</strong> Mix powder with water for a soothing drink or add to herbal remedies.</small></p>
+      <p class="text-success"><strong>KES 1,400</strong></p>
+      <button type="button" class="btn btn-success w-100" onclick="return addToCart('Slippery Elm', 1400);">Add to Cart</button>
+    </div>
+  </div>
+</div>
+
+
     <!-- Turmeric -->
     <div class="col-md-6 mb-5">
       <div class="card h-100">
@@ -618,6 +700,7 @@
         </div>
       </div>
     </div>
+      
 
     <!-- Stinging Nettle -->
     <div class="col-md-6 mb-5">
@@ -667,6 +750,7 @@
     </div>
   </div>
 </div>
+    
 
 <!-- Checkout Modal -->
 <div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
