Update product images for Castor Oil and Slippery Elm

--- a/frontend/order.html
+++ b/frontend/order.html
@@ -543,7 +543,7 @@
 <!-- Castor Oil -->
 <div class="col-md-6 mb-5">
   <div class="card h-100">
-    <img src="https://ke.jumia.is/unsafe/fit-in/500x500/product/12/345678/1.jpg" class="card-img-top" alt="Castor Oil">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSL27kXn1xMEkAvLbVfZVia3XJrmG2zTKyCQQ&s" class="card-img-top" alt="Castor Oil">
     <div class="card-body">
       <h5 class="card-title">Castor Oil</h5>
       <p class="card-text">
@@ -607,7 +607,7 @@
 <!-- Slippery Elm -->
 <div class="col-md-6 mb-5">
   <div class="card h-100">
-    <img src="https://www.aniforte.co.uk/products/aniforte-slippery-elm-bark-powder-100g" class="card-img-top" alt="Slippery Elm">
+    <img src="https://m.media-amazon.com/images/I/81oBKRoe3NL._AC_SY300_SX300_QL70_ML2_.jpg" class="card-img-top" alt="Slippery Elm">
     <div class="card-body">
       <h5 class="card-title">Slippery Elm</h5>
       <p class="card-text">
